# WoL_bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  wol.service
.github/workflows/: docker-package.yaml  release.yaml
src/: main.rs
