[package]
name = "wtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wtp"
path = "src/main.rs"

[dependencies]
ping = "^0.5.2"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "^1.0.116"
wakey = "^0.3.0"
teloxide = { version = "^0.12.2", features = ["macros"] }
tokio = { version = "^1.37.0", features = ["rt-multi-thread", "macros"]}
log = "^0.4.21"
pretty_env_logger = "^0.5.0"
rand = "^0.8.5"
lazy_static = "1.4.0"
